# EDV

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: toy_tasks.json
docs/: algorithm.md
examples/: run_toy_edv.py
src/edv/: __init__.py  ability.py  agents.py  envs.py  llm.py  memory.py  pipeline.py  types.py
tests/: test_edv_pipeline.py
