[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edv-agentic-memory"
version = "0.1.0"
description = "A compact reference implementation of Execute-Distill-Verify agentic memory."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "EDV Authors"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shidingz/EDV"
Repository = "https://github.com/shidingz/EDV"

[tool.setuptools.packages.find]
where = ["src"]
